--- a/themes/default/theme.css
+++ b/themes/default/theme.css
@@ -1,3 +1,5 @@
+@import '_effects';
+
 .gui-panel {
     position: fixed;
     bottom: 0;
@@ -35,6 +37,12 @@
     min-height: 400px;
     width: 350px;
     height: 400px;
+    -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
 
     &__titlebar {
         display: block;
@@ -59,12 +67,6 @@
             height: 24px;
             text-align: center;
             font-size: 1.2rem;
-            -webkit-touch-callout: none;
-            -webkit-user-select: none;
-            -khtml-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
         }
     }
 
