--- a/themes/newtheme/theme.css
+++ b/themes/newtheme/theme.css
@@ -21,6 +21,13 @@ a:focus {
     height: 35px;
     background: #5b5b5b;
 
+    -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+
     &__item {
         display: inline-block;
         text-align: center;
