--- a/themes/newtheme/theme.css
+++ b/themes/newtheme/theme.css
@@ -50,6 +50,7 @@ a:focus {
     width: 25px;
     height: 25px;
     margin-left: 1px;
+    filter: brightness(90%);
 
     &-close {
         background-image: url('../themes/newtheme/assets/window/window_button_close.png');
@@ -73,10 +74,16 @@ a:focus {
     }
 }
 
+.window-btn:hover {
+    transition: ease-out 0.2s;
+    filter: brightness(110%);
+}
+
 .gui-window {
     position: fixed;
-    top: 200px;
-    left: 250px;
+    z-index: 1;
+    top: 40px;
+    left: 460px;
     min-width: 350px;
     min-height: 400px;
     width: 350px;
@@ -119,11 +126,84 @@ a:focus {
     }
 
     &__content {
+        position: absolute;
         border: 1px solid white;
         border-radius: 0 0 5px 5px;
         width: 100%;
-        height: 100%;
+        top: 30px;
+        bottom: 0;
         padding: 8px;
-        background: white;
+    }
+
+    #nw-resize-wrapper {
+        position: absolute;
+        z-index: 2;
+        top: 0;
+        left: 0;
+    }
+
+    #ne-resize-wrapper {
+        position: absolute;
+        z-index: 2;
+        top: 0;
+        right: 0;
+    }
+
+    #sw-resize-wrapper {
+        position: absolute;
+        z-index: 2;
+        bottom: 0;
+        left: 0;
+    }
+
+    #se-resize-wrapper {
+        position: absolute;
+        z-index: 2;
+        bottom: 0;
+        right: 0;
+    }
+
+    #nw-resize {
+        position: absolute;
+        z-index: 2;
+        top: -5px;
+        left: -5px;
+        width: 10px;
+        height: 10px;
+        background-color: red;
+        cursor: nw-resize;
+    }
+
+    #ne-resize {
+        position: absolute;
+        z-index: 2;
+        top: -5px;
+        right: -5px;
+        width: 10px;
+        height: 10px;
+        background-color: red;
+        cursor: ne-resize;
+    }
+
+    #sw-resize {
+        position: absolute;
+        z-index: 2;
+        bottom: -5px;
+        left: -5px;
+        width: 10px;
+        height: 10px;
+        background-color: red;
+        cursor: sw-resize;
+    }
+
+    #se-resize {
+        position: absolute;
+        z-index: 2;
+        bottom: -5px;
+        right: -5px;
+        width: 10px;
+        height: 10px;
+        background-color: red;
+        cursor: se-resize;
     }
 }
