--- a/themes/newtheme/theme.css
+++ b/themes/newtheme/theme.css
@@ -7,7 +7,7 @@ body {
 }
 
 a {
-    
+
 }
 
 a:focus {
@@ -38,9 +38,53 @@ a:focus {
         transition: background, color 0.2s;
         &--active {
             border-top: 4px solid black;
-            padding-top: 4px;
+            padding-top: 3px;
             color: black;
-            background: rgba(255, 255, 255, 0.87);
+            background-color: rgba(255, 255, 255, 0.87);
+        }
+
+        p {
+            margin-bottom: 8px;
+        }
+
+        &__context-menu {
+            display: none;
+            position: relative;
+            bottom: 335px;
+            background-color: rgba(245, 245, 245, 1.0);
+            border: 1px solid black;
+            width: 100%;
+            height: 300px;
+            color: black;
+
+            &__content {
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                height: auto;
+                text-align: center;
+
+                &__item-separator {
+                    display: inline-block;
+                    width: 100%;
+                    height: 1px;
+                    margin: 3px auto;
+                    background-color: black;
+                }
+
+                &__menu-item {
+                    display: inline-block;
+                    width: 100%;
+                    height: auto;
+                    font-size: 0.9rem;
+                    font-weight: bold;
+                    transition: all ease-out .2s;
+                }
+                
+                &__menu-item:hover {
+                    letter-spacing: .1rem;
+                }
+            }
         }
     }
 }
