--- a/themes/newtheme/theme.css
+++ b/themes/newtheme/theme.css
@@ -29,7 +29,7 @@ a:focus {
         user-select: none;
 
     &__item {
-        display: inline-block;
+        display: block;
         padding-top: 7px;
         height: 100%;
         width: 100%;
@@ -42,6 +42,7 @@ a:focus {
             height: 100%;
             width: 12%;
             text-align: center;
+            
         }
 
         &--active {
@@ -99,7 +100,7 @@ a:focus {
     &__clock {
         position: absolute;
         right: 0;
-        margin-right: 6px;
+        margin-right: 10px;
         padding-top: 5px;
         color: white;
         font-size: 1.3rem;
@@ -194,6 +195,7 @@ a:focus {
         top: 30px;
         bottom: 0;
         padding: 8px;
+        background-color: white;
     }
 
     #nw-resize-wrapper {
