I've added support for window icons.

--- a/themes/newtheme/_effects.css
+++ b/themes/newtheme/_effects.css
@@ -1,3 +1,8 @@
 .window-effect-transparency {
     opacity: 0.86;
 }
+
+.context-menu-fadein {
+    opacity: 1.0;
+    transform: translateY(0%);
+}
