--- a/themes/newtheme/theme.css
+++ b/themes/newtheme/theme.css
@@ -36,6 +36,15 @@ a:focus {
         color: white;
         transition: background, color 0.2s;
 
+        &__icon {
+            display: block;
+            float: left;
+            width: 22px;
+            height: 22px;
+            margin: 0 0 0 6px;
+            background: rgba(0, 0, 0, 0.2);
+        }
+
         &-wrapper {
             display: inline-block;
             padding: 0;
@@ -65,6 +74,14 @@ a:focus {
             width: 100%;
             height: 300px;
             color: black;
+            transition: all 2s;
+            opacity: 0.0;
+            transform: translateY(5%);
+
+            &--crazy-effect {
+                opacity: 1.0;
+                transform: translateY(0%);
+            }
 
             &__content {
                 position: absolute;
@@ -182,6 +199,14 @@ a:focus {
             height: 24px;
             text-align: center;
             font-size: 1.1rem;
+        }
+
+        &__icon {
+            position: absolute;
+            top: 3px;
+            right: 6px;
+            width: 22px;
+            height: 22px;
         }
     }
 
