I've made some styling changes to the context menus, and I have made the two context menu related functions in the panel-item-contextmenu.js file return the menu object, so that these two functions can then later be chained together.

--- a/themes/newtheme/_effects.css
+++ b/themes/newtheme/_effects.css
@@ -1,8 +1,8 @@
-.window-effect-transparency {
+body .window-effect-transparency {
     opacity: 0.86;
 }
 
-.context-menu-fadein {
+body .context-menu-fadein {
     opacity: 1.0;
     transform: translateY(0%);
 }
