--- a/themes/newtheme/theme.css
+++ b/themes/newtheme/theme.css
@@ -74,14 +74,9 @@ a:focus {
             width: 100%;
             height: 300px;
             color: black;
-            transition: all 2s;
-            opacity: 0.0;
-            transform: translateY(5%);
-
-            &--crazy-effect {
-                opacity: 1.0;
-                transform: translateY(0%);
-            }
+            transition: opacity, transform ease-out .15s;
+            opacity: 1.0;
+            transform: translateY(0%);
 
             &__content {
                 position: absolute;
@@ -90,12 +85,13 @@ a:focus {
                 height: auto;
                 text-align: center;
                 margin-bottom: 5px;
+                padding-bottom: 5px;
 
                 &__item-separator {
                     display: inline-block;
                     width: 100%;
                     height: 1px;
-                    margin: 3px auto;
+                    margin: -3px auto;
                     background-color: black;
                 }
 
@@ -103,12 +99,12 @@ a:focus {
                     display: inline-block;
                     width: 100%;
                     height: auto;
+                    margin-top: 10px;
                     font-weight: bold;
-                    transition: all ease-out .2s;
                 }
                 
                 &__menu-item:hover {
-                    letter-spacing: .1rem;
+                    color: rgba(0, 0, 0, 0.75);
                 }
             }
         }
@@ -165,6 +161,7 @@ a:focus {
     min-height: 400px;
     width: 350px;
     height: 400px;
+    opacity: 1.0;
     -webkit-touch-callout: none;
         -webkit-user-select: none;
         -khtml-user-select: none;
