--- a/themes/newtheme/theme.css
+++ b/themes/newtheme/theme.css
@@ -66,7 +66,7 @@ a:focus {
         }
 
         &__context-menu {
-            display: none;
+            visibility: hidden;
             position: relative;
             bottom: 335px;
             background-color: rgba(245, 245, 245, 1.0);
@@ -74,9 +74,9 @@ a:focus {
             width: 100%;
             height: 300px;
             color: black;
-            transition: opacity, transform ease-out .15s;
-            opacity: 1.0;
-            transform: translateY(0%);
+            transition: all ease-out .15s;
+            opacity: 0.0;
+            transform: translateY(5%);
 
             &__content {
                 position: absolute;
