--- a/themes/newtheme/_effects.css
+++ b/themes/newtheme/_effects.css
@@ -1,3 +1,8 @@
+html .window-snap-indicator-fade-in {
+    visibility: visible;
+    opacity: 0.8;
+}
+
 html .window-effect-transparency {
     opacity: 0.86;
 }
