--- a/themes/newtheme/theme.css
+++ b/themes/newtheme/theme.css
@@ -27,7 +27,7 @@ a:focus {
         opacity: 0;
         width: 100%;
         height: 100%;
-        border: 2px solid white;
+        border: 3px solid white;
         background-color: #fabc00;
         transition: ease-out .15s;
     }
@@ -40,7 +40,7 @@ a:focus {
         bottom: 0;
         left: 0;
         right: 50%;
-        border: 2px solid white;
+        border: 3px solid white;
         background-color: #fabc00;
         transition: ease-out .15s;
     }
@@ -53,7 +53,7 @@ a:focus {
         bottom: 0;
         left: 50%;
         right: 0;
-        border: 2px solid white;
+        border: 3px solid white;
         background-color: #fabc00;
         transition: ease-out .15s;
     }
@@ -226,6 +226,8 @@ a:focus {
         color: white;
         font-weight: bold;
         &__buttons {
+            position: relative;
+            z-index: 2;
             display: block;
             float: left;
             width: 78px;
@@ -236,9 +238,10 @@ a:focus {
         }
         &__title {
             position: absolute;
+            z-index: 1;
             padding-top: 2px;
-            left: 50%;
-            transform: translateX(-50%);
+            left: 0%;
+            width: 100%;
             height: 24px;
             text-align: center;
             font-size: 1.1rem;
