--- a/themes/newtheme/theme.css
+++ b/themes/newtheme/theme.css
@@ -77,6 +77,7 @@ a:focus {
     &__item {
         display: block;
         padding-top: 7px;
+        border-right: 1px solid gray;
         height: 100%;
         width: 100%;
         color: white;
@@ -208,6 +209,8 @@ a:focus {
     width: 350px;
     height: 400px;
     opacity: 1.0;
+    border: 1px solid rgb(235, 235, 235);
+    border-radius: 5px 5px 0 0;
     -webkit-touch-callout: none;
         -webkit-user-select: none;
         -khtml-user-select: none;
