--- a/themes/newtheme/_effects.css
+++ b/themes/newtheme/_effects.css
@@ -11,6 +11,7 @@ html .window-effect-shade {
     transition: ease-out .1s;
     filter: grayscale(.3) brightness(.95);
     border: 1px solid transparent;
+    border-radius: 5px 5px 5px 5px;
 }
 
 html .context-menu-fadein {
