--- a/themes/newtheme/theme.css
+++ b/themes/newtheme/theme.css
@@ -283,6 +283,7 @@ a:focus {
         bottom: 0;
         padding: 8px;
         background-color: white;
+        overflow: hidden;
     }
 
     #nw-resize-wrapper {
