The panel, task-bar and line switcher seem to work fine for the moment. I began to experiment on icons-only panel item mode.

--- a/themes/newtheme/_effects.css
+++ b/themes/newtheme/_effects.css
@@ -19,3 +19,15 @@ html .context-menu-fadein {
     opacity: 1.0;
     transform: translateY(0%);
 }
+
+html .menu-fadein {
+    visibility: visible;
+    opacity: 1.0;
+    transform: translateY(0%);
+}
+
+html .clock-widget-fadein {
+    visibility: visible;
+    opacity: 1.0;
+    transform: translateY(0%);
+}
