--- a/themes/newtheme/_effects.css
+++ b/themes/newtheme/_effects.css
@@ -12,6 +12,7 @@ html .window-effect-shade {
     filter: grayscale(.3) brightness(.95);
     border: 1px solid rgb(235, 235, 235);
     border-radius: 5px 5px 5px 5px;
+    z-index: 2;
 }
 
 html .context-menu-fadein {
