--- a/themes/newtheme/css/_gui-desktop.css
+++ b/themes/newtheme/css/_gui-desktop.css
@@ -1,18 +1,22 @@
 .gui-desktop {
     position: fixed;
-    z-index: 1;
+    z-index: 0;
     top: 0;
-    bottom: 35px;
+    bottom: 0;
     left: 0;
     right: 0;
+
+    &--only-desktop {
+        bottom: 35px;
+    }
 
     &__window-snap-indicator-top {
         visibility: hidden;
         opacity: 0;
         width: 100%;
         height: 100%;
-        border: 3px solid white;
-        background-color: #fabc00;
+        border: 1px solid rgb(99, 99, 99);
+        background-color: white;
         transition: ease-out .15s;
     }
 
@@ -24,8 +28,8 @@
         bottom: 0;
         left: 0;
         right: 50%;
-        border: 3px solid white;
-        background-color: #fabc00;
+        border: 1px solid rgb(99, 99, 99);
+        background-color: white;
         transition: ease-out .15s;
     }
 
@@ -37,8 +41,8 @@
         bottom: 0;
         left: 50%;
         right: 0;
-        border: 3px solid white;
-        background-color: #fabc00;
+        border: 1px solid rgb(99, 99, 99);
+        background-color: white;
         transition: ease-out .15s;
     }
 }
