I implemented the basic overlay, which is rendered to the screen when the width of the document viewport is too small to fit the necessary components of SimpleJSGui.

--- a/themes/newtheme/css/theme.css
+++ b/themes/newtheme/css/theme.css
@@ -1,6 +1,7 @@
 @import '_effects';
 @import 'https://fonts.googleapis.com/css?family=Montserrat';
 @import '_gui-desktop';
+@import '_gui-overlay';
 @import '_gui-panel';
 @import '_gui-window';
 @import '_window-btn';
