--- a/themes/newtheme/css/_gui-panel.css
+++ b/themes/newtheme/css/_gui-panel.css
@@ -201,8 +201,8 @@
             &__context-menu {
                 visibility: hidden;
                 position: fixed;
-                background-color: rgba(245, 245, 245, 1.0);
-                border: 1px solid black;
+                background-color: rgba(255, 255, 255, 0.85);
+                border: 1px solid rgba(0, 0, 0, 0.5);
                 width: 230px;
                 height: 300px;
                 color: black;
@@ -216,23 +216,23 @@
                     width: 100%;
                     height: auto;
                     text-align: center;
-                    margin-bottom: 5px;
-                    padding-bottom: 5px;
+                    margin-bottom: 3px;
+                    padding-bottom: 3px;
     
                     &__item-separator {
                         display: inline-block;
                         width: 100%;
                         height: 1px;
-                        margin: -3px auto;
-                        background-color: black;
+                        margin: 0 auto 5px auto;
+                        background-color: rgba(0, 0, 0, 0.65);;
                     }
     
                     &__menu-item {
                         display: inline-block;
                         width: 100%;
                         height: auto;
-                        margin-top: 10px;
-                        font-weight: bold;
+                        margin-top: 3px;
+                        font-weight: normal;
                     }
                     
                     &__menu-item:hover {
