Windows now load the default window icon in the constructor method.

--- a/themes/newtheme/css/_gui-panel.css
+++ b/themes/newtheme/css/_gui-panel.css
@@ -283,6 +283,8 @@
                 &__prevMonth {
                     width: 16px;
                     height: 16px;
+                    border: none;
+                    outline: none;
                     margin: 5px 10px 0 0;
                     background-color: transparent;
                     background-size: 16px 16px;
@@ -304,6 +306,8 @@
                 &__nextMonth {
                     width: 16px;
                     height: 16px;
+                    border: none;
+                    outline: none;
                     margin-top: 5px;
                     background-size: 16px 16px;
                     background-image: url("../themes/newtheme/assets/icons/nextMonth.png");
