--- a/themes/newtheme/css/_gui-panel.css
+++ b/themes/newtheme/css/_gui-panel.css
@@ -59,25 +59,34 @@
             opacity: 0.0;
             transform: translateY(5%);
 
-            h1 {
-                padding: 10px 0 10px 10px;
-                font-size: 1.3rem;
-                text-align: left;
-                color: white;
-                border-bottom: 1px solid rgba(200, 200, 200, 0.75);
+            &__titleArea {   
+                &__text {
+                    h1 {
+                        padding: 10px 0 10px 10px;
+                        font-size: 1.3rem;
+                        text-align: left;
+                        color: white;
+                        border-bottom: 1px solid rgba(200, 200, 200, 0.75);
+                    }
+                }
             }
+            &__items {
+                p {
+                    color: white;
+                } 
 
-            &__menu-item {
-                padding: 5px 0 5px 10px;
-                font-size: 1.2rem;
-                text-align: left;
-                color: white;
-            }
-
-            &__item-separator {
-                width: 100%;
-                height: 1px;
-                background-color: rgba(225, 225, 225, 0.35);
+                &__menu-item {
+                    padding: 5px 0 5px 10px;
+                    font-size: 1.2rem;
+                    text-align: left;
+                    color: white;
+                }
+    
+                &__item-separator {
+                    width: 100%;
+                    height: 1px;
+                    background-color: rgba(225, 225, 225, 0.35);
+                }
             }
         }
     }
