I've implemented a spinner for the loading screen!

--- a/themes/newtheme/css/_effects.css
+++ b/themes/newtheme/css/_effects.css
@@ -84,3 +84,9 @@ html .clock-widget-fadein {
         transform: scaleY(0);
     }
 }
+
+@keyframes animation-spinner {
+    to {
+        transform: rotate(360deg);
+    }
+}
