--- a/themes/newtheme/css/_gui-overlay.css
+++ b/themes/newtheme/css/_gui-overlay.css
@@ -6,12 +6,35 @@
     z-index: 4;
     background-color: rgb(77, 87, 94);
 
-    p {
+    &__center-container {
         position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        text-align: center;
+    }
+
+    p {
         color: white;
         font-size: 2rem;
         text-align: center;
-        top: 50%;
-        transform: translateY(-50%);
+    }
+
+    &__spinner {
+        display: inline-block;
+        width: 192px;
+        height: 192px;
+        margin-bottom: 32px;
+        border-top: 4px solid white;
+        border-radius: 50%;
+        
+        transform-origin: 50% 50%;
+
+        animation-duration: 0.36s;
+        animation-timing-function: ease-out;
+        animation-direction: normal;
+        animation-fill-mode: forwards;
+        animation-iteration-count: infinite;
+        animation-name: animation-spinner;
     }
 }
