--- a/themes/newtheme/css/_gui-overlay.css
+++ b/themes/newtheme/css/_gui-overlay.css
@@ -1,10 +1,14 @@
 .gui-overlay {
     position: fixed;
-    display: none;
+    visibility: hidden;
     width: 100vw;
     height: 100vh;
     z-index: 4;
     background-color: rgb(77, 87, 94);
+    opacity: 1.0;
+    transition-property: opacity;
+    transition-duration: .3s;
+    transition-timing-function: ease-out;
 
     &__center-container {
         position: absolute;
