--- a/themes/newtheme/css/_gui-window.css
+++ b/themes/newtheme/css/_gui-window.css
@@ -15,6 +15,11 @@
         -ms-user-select: none;
         user-select: none;
 
+    &--no-borders {
+        border: none;
+        border-radius: 0px;
+    }
+
     &__titlebar {
         position: relative;
         display: block;
@@ -25,6 +30,12 @@
         border-radius: 5px 5px 0 0;
         color: white;
         font-weight: bold;
+
+        &--no-borders {
+            border: none;
+            border-radius: 0px;
+        }
+
         &__buttons {
             position: relative;
             z-index: 2;
