--- a/themes/newtheme/css/_gui-panel.css
+++ b/themes/newtheme/css/_gui-panel.css
@@ -82,6 +82,10 @@
                     text-align: left;
                     color: white;
                 }
+
+                &__menu-item:hover {
+                    background-color: rgba(255, 255, 255, 0.25);
+                }
     
                 &__item-separator {
                     width: 100%;
