Fix for context menu items not being handled by the WindowManager.

--- a/themes/newtheme/css/_gui-window.css
+++ b/themes/newtheme/css/_gui-window.css
@@ -79,6 +79,10 @@
         overflow: auto;
     }
 
+    &__content--no-padding {
+        padding: 0px;
+    }
+
     #nw-resize {
         position: absolute;
         z-index: 2;
