The names of days in the calendar widget no longer change their backgrounds on mouse hover.

--- a/themes/newtheme/css/_gui-panel.css
+++ b/themes/newtheme/css/_gui-panel.css
@@ -408,6 +408,10 @@
                         border-left: 0;
                         border-right: 0;
                     }
+
+                    td:hover {
+                        background-color: inherit;
+                    }
                 }
 
                 tbody {
